# decoy

./: CHANGELOG.md  README.md  TODOs  decoy.cabal  rule-spec.schema.json  rule_spec.schema.json
.github/workflows/: ci.yml
app/: Main.hs
decoy-server/: CHANGELOG.md  decoy-server.cabal  test_rules.json
decoy-server/app/: Main.hs
decoy-server/src/: Decoy.hs
decoy-server/src/Decoy/: Router.hs
decoy-server/test/: Main.hs
decoy-types/: README.md  decoy-types.cabal
decoy-types/src/Decoy/: Modifier.hs  Rule.hs  Types.hs
decoy-types/test/: Main.hs
src/: Decoy.hs
src/Decoy/: Modifier.hs  Router.hs  Rule.hs
test/: Main.hs
