cabal-version:      3.0
name:               decoy
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Aaron Allen
maintainer:         aaronallen8455@gmail.com
-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                    README.md
extra-source-files: test_rules.json

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Decoy
    other-modules: Decoy.Router
                   Decoy.Rule
                   Decoy.Modifier
    -- other-extensions:
    build-depends:    base >=4.15.0.0,
                      async,
                      warp,
                      wai,
                      mustache,
                      text,
                      bytestring,
                      containers,
                      http-types,
                      http-conduit,
                      aeson,
                      aeson-diff,
                      directory,
                      jsonpath,
                      regex-tdfa,
                      megaparsec,
                      semialign,
                      these,
                      case-insensitive
    hs-source-dirs:   src
    default-language: GHC2021

executable decoy
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >=4.15.0.0,
        warp,
        wai,
        mustache,
        text,
        bytestring,
        containers,
        http-types,
        aeson,
        directory,
        decoy

    hs-source-dirs:   app
    default-language: GHC2021

test-suite decoy-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base,
        decoy,
        tasty,
        tasty-hunit,
        http-conduit,
        http-types,
        text,
        aeson,
        aeson-diff,
        aeson-qq
