cabal-version:      3.0
name:               decoy-server
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Aaron Allen
maintainer:         aaronallen8455@gmail.com
-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                    README.md
extra-source-files: test_rules.json

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Decoy
    other-modules: Decoy.Router
    -- other-extensions:
    build-depends:    base >=4.15.0.0,
                      decoy-types,
                      async,
                      warp >= 3 && < 4,
                      wai >= 3 && < 4,
                      mustache >= 2 && < 3,
                      text,
                      bytestring,
                      containers,
                      http-types ^>= 0.12,
                      aeson >= 2 && < 3,
                      aeson-diff ^>= 1.1,
                      directory,
                      jsonpath ^>= 0.3,
                      regex-tdfa >= 1 && < 2,
                      scientific >= 0.3,
                      semialign,
                      these,
                      case-insensitive >= 1,
                      fast-logger >= 3 && < 4,
                      optparse-applicative
    hs-source-dirs:   src
    default-language: GHC2021

executable decoy
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >=4.15.0.0,
        decoy-server

    hs-source-dirs:   app
    default-language: GHC2021

test-suite decoy-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base,
        decoy-server,
        tasty,
        tasty-hunit,
        http-conduit,
        http-types,
        text,
        aeson,
        aeson-diff,
        aeson-qq
